# tetsu-rust-flutter

./: .gitignore  graphql.config.yaml
app/: README.md  analysis_options.yaml  build.yaml  pubspec.yaml
app/android/app/: build.gradle
app/ios/Runner/: Info.plist
app/ios/Runner.xcodeproj/: project.pbxproj
app/lib/: addremote.dart  consts.dart  main.dart  preferences.dart  remote.dart  remote.g.dart  remote_manager.dart  settings.dart
app/lib/cubit/: remote_cubit.dart  remote_selection_cubit.dart  remote_selection_state.dart  remote_state.dart
app/lib/dashboard/: dashboard.dart
app/lib/gql/: get_anime_details.ast.gql.dart  get_anime_details.data.gql.dart  get_anime_details.data.gql.g.dart  get_anime_details.graphql  get_anime_details.req.gql.dart  get_anime_details.req.gql.g.dart  get_anime_details.var.gql.dart  get_anime_details.var.gql.g.dart  get_anime_shows.ast.gql.dart  get_anime_shows.data.gql.dart  get_anime_shows.data.gql.g.dart  get_anime_shows.graphql  get_anime_shows.req.gql.dart  get_anime_shows.req.gql.g.dart  get_anime_shows.var.gql.dart  get_anime_shows.var.gql.g.dart  get_player_status.ast.gql.dart  get_player_status.data.gql.dart  get_player_status.data.gql.g.dart  get_player_status.graphql  get_player_status.req.gql.dart  (+33 more)
app/test/: widget_test.dart
daemon/: .env  Cargo.toml
daemon/src/: anidb_indexer.rs  auth.rs  main.rs  routes.rs
daemon/src/gql/: mod.rs  watch_progress.rs
daemon/src/gql/anime/: anime.rs  episode.rs  file.rs  group.rs  mod.rs
daemon/src/gql/player/: mod.rs
daemon/src/gql/sysinfo/: mod.rs  system.rs
daemon/src/mpv/: mod.rs
(+19 files in other folders)
